--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -2,18 +2,8 @@
 # run often (avoiding download) rake spec_standalone
 fixtures:
   forge_modules:
-      stdlib:
-          repo: "puppetlabs/stdlib"
-          ref: "4.3.2"
+      stdlib: "puppetlabs/stdlib"
       concat: "puppetlabs/concat"
       apt: "puppetlabs/apt"
-      ssh: "erwbgy/ssh"
-      nfs: "jbeard/nfs"
-      portmap: "jbeard/portmap"
-      augeasproviders: domcleal/augeasproviders
-  repositories:
-    dnsmasq:
-      repo: git://github.com/ngiger/puppet-dnsmasq.git
-      ref: master
   symlinks:
     x2go: "#{source_dir}"
