--- a/.travis.yml
+++ b/.travis.yml
@@ -9,14 +9,12 @@ matrix:
   fast_finish: true
   include:
   - rvm: 1.9.3
-    env: PUPPET_GEM_VERSION="3.6.2"
+    env: PUPPET_VERSION="3.8.6"
   - rvm: 2.1.2
-    env: PUPPET_GEM_VERSION="3.6.2"
+    env: PUPPET_VERSION="3.8.6"
   - rvm: 2.1.2
-    env: PUPPET_GEM_VERSION="~> 3.7.0" STRICT_VARIABLES="yes"
+    env: PUPPET_VERSION="~> 3.8.6" STRICT_VARIABLES="yes"
   # mysql has failure because of undefined variable mysql::params::kate
   allow_failures:
     - rvm: 1.9.3
-    - env: PUPPET_GEM_VERSION="~> 3.7.0" STRICT_VARIABLES="yes"
-notifications:
-  email: niklaus.giger@member.fsf.org
+    - env: PUPPET_VERSION="~> 3.8.6" STRICT_VARIABLES="yes"
